# cryptic-ip-pipeline

./: .gitignore  CITATION.cff  CrypticIP_ConferencePoster.pptx  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT.md  LICENSE  Makefile  QUICK_PRELIMINARY_TEST_REPORT.md  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
config/: default.yaml  dictyostelium.yaml  human.yaml  scoring.yaml  validation.yaml  yeast.yaml
crypticip/: __init__.py  alphafold.py  cli.py  config.py  conservation.py  electrostatics.py  experimental.py  external_tools.py  fpocket.py  literature.py  logging_utils.py  paths.py  pdb_io.py  pymol.py  qc.py  reporting.py  residues.py  sasa.py  scoring.py  screening.py  statistics.py  structures.py  validation.py
docs/: api.md  colab.md  experimental_followup.md  methods.md  methods_v1.md  proteome_ingestion.md  reproducibility.md  scoring.md  screening.md  troubleshooting.md  validation_plan.md
manuscript/: paper.md  references.bib  supplement.md
notebooks/: 00_colab_quickstart.ipynb  01_validation_colab.ipynb  02_yeast_screening_colab.ipynb  03_results_analysis_colab.ipynb  04_experimental_prioritization_colab.ipynb  README.md  colab_bootstrap.py
pipeline/: advanced_analysis.py  analyze_all.py  expanded_analysis.py  full_analysis.py  generate_figures.py  prepare_structures.py
results/: advanced_analysis_results.json  expanded_validation_results.json  expanded_validation_summary.csv  validation_results.json  validation_summary.csv
scripts/: build_proteome_index.py  download_alphafold_proteome.py  run_screen.py  (+4 more)
(+23 files in other folders)
